tests/173_duplicate_struct_field_error.err
pirxc compilation failed: exit status 1
Output: tests/173_duplicate_struct_field_error.pirx:4:3: duplicate field x in struct P
Error: exit status 1
