tests/173_duplicate_struct_field_error.pirx
// A struct cannot have two fields with the same name.
struct P {
  x: int;
  x: int;
}

func main(): int {
  return 0;
}
